# recepiebook

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
recipe_service/app/: config.py  dependencies.py  main.py  models.py  repository.py
recipe_service/frontend/: app.py
recipe_service/tests/: conftest.py  test_recipes.py
