[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipe-service"
version = "0.1.0"
description = "A simple recipe API built with FastAPI. Provides CRUD endpoints for managing recipes with in-memory storage."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["fastapi", "api", "recipe", "crud"]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.24.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/recipe-service"
Repository = "https://github.com/yourusername/recipe-service.git"
Documentation = "https://github.com/yourusername/recipe-service#readme"
Issues = "https://github.com/yourusername/recipe-service/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["recipe_service/tests"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
python_version = "312"
